solution to leetcode 26

--- a/docs/leetcode/69. Sqrt(x).md
+++ b/docs/leetcode/69. Sqrt(x).md
@@ -3,7 +3,7 @@
 ##### Problem: Read it at the [leetcode](https://leetcode.com/problems/sqrtx/)
 
 ### Solution:
-Here we are going to use BST (Binary Search Tree). Basically we divide our problem in half (Binary) and iterate this process untill the problem is solved.
+Here we are going to use BST (Binary Search Technique). Basically we divide our problem in half (Binary) and iterate this process untill the problem is solved.
 
 
 ### Pseudo Code:
