leetcode 20 valid parentheses problem solved

--- a/docs/leetcode/26. Remove Duplicates from Sorted Array.md
+++ b/docs/leetcode/26. Remove Duplicates from Sorted Array.md
@@ -1,4 +1,4 @@
-## 26- Remove Duplicates from Sorted Array(JavaScript)
+## Leetcode 26- Remove Duplicates from Sorted Array(JavaScript)
 #### Problem: Read at [leetcode](https://leetcode.com/problems/remove-duplicates-from-sorted-array/)
 
 In short we have to edit the existing array **(no you cannot initialize new array to store output )** and  return `k` (number of dublicate items)
