--- a/docs/leetcode/69. Sqrt(x).md
+++ b/docs/leetcode/69. Sqrt(x).md
@@ -1,4 +1,4 @@
-## 69. Sqrt(x) LeetCode Solution Javascript
+## Leetcode 69. Sqrt(x) LeetCode Solution Javascript
 
 ##### Problem: Read it at the [leetcode](https://leetcode.com/problems/sqrtx/)
 
@@ -6,7 +6,7 @@
 Here we are going to use BST (Binary Search Technique). Basically we divide our problem in half (Binary) and iterate this process untill the problem is solved.
 
 
-### Pseudo Code:
+### PseudoCode:
 Let us consider that we have a `x` = 10 and we have to calculate square root of that number. For that we have to check every number from `1 - 10`.
 
 1.  define `left = 1` and `right = x`
