--- a/docs/leetcode/125. Valid Palindrome.md
+++ b/docs/leetcode/125. Valid Palindrome.md
@@ -2,7 +2,7 @@
 lang: en-US
 title: Leetcode 125. Valid Palindrome solution
 description: Leetcode 125. Valid Palindrome solution using JavaScript and General PaseudoCode with Regex
-
+date:   2022-05-3
 ---
 
 ### Problem:
